# hireflow

./: .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements.txt  setup_db.py  vercel.json
backend/api/: index.py
backend/api/core/: config.py  database.py
backend/api/models/: schemas.py
backend/api/routes/: auth.py  blog.py  chat.py  company.py  features.py  jobs.py  matcher.py  recruiter.py  seeker.py
backend/api/services/: ai.py  blog_ai.py  jobs_api.py  llm.py
backend/supabase/migrations/: 001_schema.sql  002_seed.sql  003_matcher.sql  004_feature_requests.sql  005_blog.sql
backend/tests/: conftest.py  test_ai_services.py  test_auth.py  test_chat.py  test_company.py  test_jobs.py  test_recruiter.py  test_regression.py  test_seeker.py
backend/tests/integration/: conftest.py  test_api_contracts.py  test_api_integration.py  test_comprehensive_integration.py  test_edge_cases.py  test_multi_user.py  test_validation_errors.py
backend/tests/regression/: test_comprehensive_regression.py  test_extended_regression.py  test_final_regression.py  test_regression_comprehensive.py  test_regression_v3.py  test_regression_v4.py  test_regression_v5.py  test_regression_v6.py
backend/tests/unit/: test_ai_edge_cases.py  test_auth_and_db.py  test_comprehensive_unit.py  test_config_security.py  test_core_unit.py  test_database_layer.py  test_extended_unit.py  test_schema_validation.py
backend/tests/v2/: test_integration.py  test_regression.py  test_unit.py
backend/tools/: pressroom.py
(+35 files in other folders)
