[project]
name = "hireflow-api"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "supabase==2.11.0",
    "python-dotenv==1.0.1",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no DB or network)",
    "integration: Integration tests (mocked DB, real FastAPI)",
    "regression: Regression test suite",
]
